* UTIL type=device | improvments for JSON output
* UTIL argument outputformatset | improvement to move exceptions to separate method()
* class SecurityRule - optimisation of rewriteXML if no SecurityProfile/SecurityProfileGroup is set
* UTIL type=device | rename actions=securityprofile-create-only => actions=sp_spg-create-alert-only-bp

BUGFIX:
* UTIL UI - still in BETA - bugfix to create correct JSON playbook file if location argument is used
* UTIL all MERGER | fix for location=any allowmergingwithupperlevel
* UTIL all MERGER | bugfix to calculate ancestor
* class InterfaceContainer | bugfix if xmlRoot === NULL
* class VirtualRouterContainer | bugfix if VSYS has no XMLnode available to import new Virtual-Router; xmlRoot === null
* UTIL type=xml-issue | bugfix for finding correct sec/natRule for double whitespaces in object name
* UTIL type=device - actions=logforwardingprofile-create-bp | bugfix FW can only have 'set shared log-settings'
* UTIL type=gratuitous-arp | bugfix to get feature working after the migration to classes
* UTIL argument 'outputformatset' | bugfix to include all XMLnode value information
* class IKEGateway | bugfix for reading XML if XMLnode is not available
* UTIL argument 'outputformatset' bugfix for attribute name
* UTIL argument "outputformatset" - bugfix to get all XMLnode without any child and no textContent
* UTIL argument 'outputformatset' another bugfix to define "set commands" correct
* class customURLProfile - bugfix to create correct "set commands" for version 91
* UTIL type=device - bugfix actions=DefaultSecurityRule-remove-override if no override is availalbe
* UTIL argument outputformatset | bugfix for zone-protection-profile - combine multiple set commands related to 'flood xyz red'
* UTIL type=device actions=defaultsecurityrule-securityprofile-remove:false | bugfix to remove secprof correctly in API mode

GENERAL:
* class PanAPIConnector | introduce method commitAll() and commitPartial( $user)