@@ -22,6 +22,7 @@ UTILS:
 * UTIL argument outputformatset | improvement to move exceptions to separate method()
 * class SecurityRule - optimisation of rewriteXML if no SecurityProfile/SecurityProfileGroup is set
 * UTIL type=device | rename actions=securityprofile-create-only => actions=sp_spg-create-alert-only-bp
+* UTIL type=device | introduce actions=defaultsecurityrule-action-set:[all|intrazone|interzone],[allow|deny]
 
 BUGFIX:
 * UTIL UI - still in BETA - bugfix to create correct JSON playbook file if location argument is used
